--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!---------information-------> 
 <section class="info">
     <h1>The information</h1>
-    <p>The products fall into different categories such as.....</p>
+    <p> products fall into different categories such as.....</p>
     
     <div class="row">
         <div class="info-col">
